# engine

./: .gitattributes  .gitignore  CopyDLLs_win.bat  README.md  engine.pro  install_SDL.bat  install_dependencies.bat  main.cpp  networking.h  openglrenderer.cpp  openglrenderer.h  physicalcomponent.cpp  physicalcomponent.h  player.cpp  player.h  playeravatar.cpp  playeravatar.h  playercontroller.cpp  playercontroller.h  playerdisplay.cpp  playerdisplay.h  progkonfshowcasegame.cpp  progkonfshowcasegame.h  projectile.cpp  projectile.h  projectilesystem.cpp  projectilesystem.h  raptorgame2d.cpp  raptorgame2d.h  sdl_keytester.cpp  sdl_keytester.h  testdrawopengl.cpp  testdrawopengl.h  testgamefranko.cpp  testgamefranko.h
cfg/: Engine.cfg  OpenGL_test.cfg  RaptorGame.cfg  main.cfg
doc/: OpenGLtutorial.txt  PLAN.txt  branch_StagedForDelete_contents.txt  conventions_and_principles.txt  link.txt  links.txt  notes.txt  qtcreator.txt  shortgoals.txt  todo.txt  warning   Microsoft Docs.htm
doc/dev/: TODO.txt
doc/ubo_layouts/: ubo_shared_layout.txt  ubo_std140_layout.txt
doc/warning   Microsoft Docs_files/: 1fa973b2.css  7c701241.js  f1e7d9d9.css
include/: BasicPositionComponent.h  Camera.h  Camera2D.h  Common.h  Component.h  DrawableComponent.h  DrawingControl.h  DrawingManager.h  Engine.h  EngineControl.h  Entity.h  GlHelpers.h  GlWrapper.h  RealComponent.h  SDLApplication.h  SDLBillboardComponent.h  SDLControl.h  SDLWrapper.h  Scheduler.h  SerialScheduler.h  Services.h  ShaderProgram.h  ShaderProgram_old.h  World.h  WorldComponent.h  _asset.h  _camera.h  _mesh.h  _modelimporter.h  application.h  asset.cpp  camera.h  component.h  drawhelpers.h  engine.h  engine_events.h  enginecontrol.h  engineevent.h  entity.h  events.h  (+19 more)
include/alg/: std_extension.hpp
include/algo/: BFS.h  BFSNode.h  Edge.h  Graph.h  Node.h
include/engine/: Actor.h  BillboardComponent.h  Camera.h  Camera2D.h  CameraOrtographic.h  CameraPerspective.h  Common.h  Component.h  Def.h  DefaultShaderProgram.h  DrawableComponent.h  DrawingControl.h  DrawingManager.h  Engine.h  EngineControl.h  EngineEvent.h  Entity.h  Geometry.h  Material.h  MaterialConfig.h  Mesh.h  MeshComponent.h  MeshLoader.h  Message.h  PositionComponent.h  RealComponent.h  SDLApplication.h  SDLBillboardComponent.h  SDLComponent.h  SDLControl.h  SDLDrawableComponent.h  SDLManager.h  Scheduler.h  SerialScheduler.h  Services.h  SphereComponent.h  StandardShaderProgram.h  SystemControl.h  SystemManager.h  Texture.h  (+5 more)
include/math/: bool2.h  bool4.h  float2.h  float3swizzle.h  float4.h  float4swizzle.h  int1.h  int3.h  math.h
include/shaders/: manifest
include/test/: SDLKeytester.h  sdl_keytester.h  ticktester_game.h  ticktester_printercomponent.h  ticktester_printerentity.h
include_/: entity.h  game.h  game_events.h  gamecontrol.h  networking.h  world.h  worldcomponent.h
include_/math/: bool1.h  bool3.h  boolswizzle.h  constants.cpp  float1.h  float2swizzle.h  float3.h  float4x4.h  floatswizzle.h  int2.h  int4.h  intswizzle.h  math.h
media/shader/: DefaultFragmentShader.fs  DefaultVertexShader.vs  FrameInfo.ubo  LightingInfo.ubo
ogl_/include/: cube.h  newmesh.h  shaderprogram.h  shaders.h
ogl_/src/: cube.cpp  main.cpp  newmesh.cpp  shaderprogram.cpp
projects/debian/: CMakeLists.txt
projects/win32/: CMakeLists.txt
projects/win64/: CMakeLists.txt
script/: build_debian.sh  build_debian_debug.sh  build_win.bat  build_win_debug.bat  build_win_full.bat  build_win_project.bat  create_actor.sh  create_class.sh  generate_project.sh
script/data/: newactor.cpp.model  newactor.h.model  newclass.cpp.model  newclass.h.model  start_OpenGL_test.bat.model  start_OpenGL_test.sh.model
script/debian/: README.md  install_dependencies.sh  install_tools.sh  obtain_math3d.sh  obtain_ptlib.sh  obtain_sdl.sh
script/templates/: get_script_directory.sh
script/win/: 1_manual_dl_dependency_installers.txt  2_manual_install_buildtools.txt  2_manual_install_dependencies.txt  3download_and_build_dependencies.bat  4clean_up_temp.bat  README.md  build_tools.bat  fetch_and_build_SDL.bat  fetch_and_build_all.bat  fetch_and_build_assimp.bat  fetch_and_build_glew.bat  fetch_and_build_libpng.bat  fetch_and_build_math3d.bat  fetch_and_build_ptlib.bat  set_env.bat
src/: BasicPositionComponent.cpp  Camera.cpp  Camera2D.cpp  Component.cpp  DrawableComponent.cpp  DrawingManager.cpp  Engine.cpp  Entity.cpp  GlWrapper.cpp  Main.cpp  PositionComponent.cpp  RealComponent.cpp  SDLApplication.cpp  SDLBillboardComponent.cpp  SDLControl.cpp  SDLWrapper.cpp  SerialScheduler.cpp  Services.cpp  ShaderProgram.cpp  ShaderProgram_old.cpp  World.cpp  WorldComponent.cpp  _glhelpers.cpp  _texture.cpp  application.cpp  camera.cpp  component.cpp  engine.cpp  entity.cpp  game.cpp  gamecontrol.cpp  main.cpp  mesh.cpp  physicalcomponent.cpp  realcomponent.cpp  sdlapplication.cpp  sdlbillboardcomponent.cpp  sdlcontrol.cpp  services.cpp  shaderprogram.cpp  (+2 more)
src/algo/: BFS.cpp  BFSNode.cpp  Edge.cpp  Graph.cpp  Node.cpp
src/engine/: Actor.cpp  BillboardComponent.cpp  Camera.cpp  Camera2D.cpp  CameraOrtographic.cpp  CameraPerspective.cpp  Component.cpp  DefaultShaderProgram.cpp  DrawableComponent.cpp  DrawingManager.cpp  Engine.cpp  Entity.cpp  Geometry.cpp  Main.cpp  Material.cpp  MaterialConfig.cpp  Mesh.cpp  MeshComponent.cpp  MeshLoader.cpp  Message.cpp  PositionComponent.cpp  RealComponent.cpp  SDLApplication.cpp  SDLBillboardComponent.cpp  SDLComponent.cpp  SDLControl.cpp  SDLManager.cpp  SerialScheduler.cpp  Services.cpp  SphereComponent.cpp  StandardShaderProgram.cpp  SystemManager.cpp  Texture.cpp  Transform.cpp  Utility.cpp  World.cpp  WorldComponent.cpp
src/test/: SDLKeytester.cpp  sdl_keytester.cpp  ticktester_game.cpp  ticktester_printercomponent.cpp  ticktester_printerentity.cpp
src_/: main.cpp  realcomponent.cpp  services.cpp  worldcomponent.cpp
test/: sdl_keytester.cpp  sdl_keytester.h  ticktester_game.cpp  ticktester_game.h  ticktester_printercomponent.cpp  ticktester_printercomponent.h  ticktester_printerentity.cpp  ticktester_printerentity.h
(+231 files in other folders)
